# sdd-workshop

./: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-todo-cli/: plan.md  spec.md  tasks.md
specs/001-todo-cli/checklists/: requirements.md
specs/001-todo-cli/implementation/: README.md  go.mod
specs/001-todo-cli/python-scaffold/: .gitignore  README.md  pyproject.toml
specs/001-todo-cli/python-scaffold/cli/: __init__.py  main.py
specs/001-todo-cli/python-scaffold/src/cli/: __init__.py  main.py
specs/001-todo-cli/python-scaffold/src/services/: __init__.py  due_date.py  models.py  tags.py  todo_service.py
specs/001-todo-cli/python-scaffold/src/storage/: __init__.py  base.py  json_store.py
specs/001-todo-cli/python-scaffold/tests/: test_cli_integration.py  test_todo_service.py
specs/001-todo-cli/python-scaffold/tests/integration/: test_cli_add.py  test_cli_complete.py  test_cli_delete.py  test_cli_help.py  test_cli_list.py  test_legacy_compat.py  test_performance.py
specs/001-todo-cli/python-scaffold/tests/unit/: test_due_date.py  test_models.py  test_service.py  test_storage_contract.py  test_storage_json.py  test_tags.py
specs/001-todo-cli/python-scaffold/todo_lib/: __init__.py  init_db.py  models.py  service.py
specs/002-tags/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+6 files in other folders)
