
[project]
name = "todo-cli-py"
version = "0.1.0"
description = "ToDo CLI (Python) - spec implementation scaffold"
requires-python = ">=3.12"

dependencies = [
	"typer>=0.9.0",
	"SQLAlchemy>=1.4",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["cli*", "todo_lib*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
